--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "yandex-music-player",
   "productName": "yandex-music-player",
   "version": "1.0.0",
-  "description": "My Electron application description",
+  "description": "Yandex Music desktop Electron application ",
+  "homepage": "https://github.com/phpusr/yandex-music-player",
   "main": "src/index.js",
   "scripts": {
     "start": "electron-forge start",
@@ -13,7 +14,7 @@
   },
   "keywords": [],
   "author": "phpusr",
-  "license": "MIT",
+  "license": "GPL",
   "config": {
     "forge": {
       "make_targets": {
