Fixes for windows

--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
         ]
       },
       "electronPackagerConfig": {
-        "packageManager": "yarn"
+        "packageManager": "yarn",
+        "ignore": [".idea", "dist"]
       },
       "electronWinstallerConfig": {
         "name": "yandex_music_player"
@@ -48,11 +49,11 @@
     }
   },
   "dependencies": {
+    "electron-compile": "^6.4.4",
     "electron-squirrel-startup": "^1.0.0",
     "mpris-service": "^2.1.0"
   },
   "devDependencies": {
-    "electron-compile": "^6.4.4",
     "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
